--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Interactive Navigation Bar</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-</head>
-<body>
 
-</body>
+	<head>
+		<title>Interactive Navigation Bar</title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="css/styles.css">
+	</head>
+
+	<body>
+
+	<header>
+		<h1>Interactive Navigation Bar</h1>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="notes.html">Notes</li>
+			<li><a href="http://www.edwardr.info">Code Cats</li>
+			<li><a href="http://www.creativebloq.com/web-design/website-navigation-4132549">Examples</a></li>
+		</ul>
+		
+	</header>
+
+	</body>
 </html>
