--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
 	<header>
 		<h1>Interactive Navigation Bar</h1>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="notes.html">Notes</li>
-			<li><a href="http://www.edwardr.info">Code Cats</li>
-			<li><a href="http://www.creativebloq.com/web-design/website-navigation-4132549">Examples</a></li>
-		</ul>
-		
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="notes.html">Notes</li>
+				<li><a href="http://www.edwardr.info" target="_blank">Code Cats</li>
+				<li><a href="http://www.creativebloq.com/web-design/website-navigation-4132549" target="_blank">Examples</a></li>
+			</ul>
+		<nav>
 	</header>
 
 	</body>
